# ai-expense-tracker-mcp-server

./: .env  .gitignore  README.md  dbConnection.py  main.py  pyproject.toml
client/: client.py
tools/: addExpense.py  deleteExpense.py  getExpenses.py  rangeExpenses.py  summary.py  totalExpenses.py
